--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,9 @@
     <pluginManagement>
       <plugins>
         <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
+        <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-deploy-plugin</artifactId>
+  <version>3.0.0-M1</version>
         </plugin>
 		 <plugin>
           <artifactId>maven-clean-plugin</artifactId>
